# kubecontrol

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: lib.rs  main.rs
src/cache/: mod.rs
src/cli/: commands.rs  mod.rs
src/client/: mod.rs
src/commands/: apply.rs  context.rs  debug.rs  delete.rs  describe.rs  exec.rs  get.rs  list.rs  logs.rs  mod.rs  portforward.rs  restart.rs  scale.rs  shell.rs  version.rs
src/config/: mod.rs
src/debug/: azure.rs  cloud.rs  cluster.rs  deployment.rs  dns.rs  eks.rs  events.rs  gcp.rs  ingress.rs  mod.rs  network.rs  node.rs  pod.rs  report.rs  resources.rs  security.rs  service.rs  storage.rs  types.rs
src/debug/aws/: cluster.rs  config.rs  identity.rs  mod.rs  network.rs  nodes.rs  observability.rs  registry.rs  storage.rs  workloads.rs
src/debug/azure/: config.rs  identity.rs  mod.rs  network.rs  nodes.rs  observability.rs  registry.rs  storage.rs  workloads.rs
src/debug/gcp/: config.rs  identity.rs  mod.rs  network.rs  nodes.rs  observability.rs  registry.rs  storage.rs  workloads.rs
src/error/: mod.rs
src/fuzzy/: mod.rs
src/output/: mod.rs
src/resources/: mod.rs  registry.rs  traits.rs
src/resources/apps/: daemonset.rs  deployment.rs  mod.rs  replicaset.rs  statefulset.rs
src/resources/core/: configmap.rs  mod.rs  namespace.rs  node.rs  pod.rs  secret.rs  service.rs
src/web/: assets.rs  handlers.rs  mod.rs  server.rs  websocket.rs
tests/: cli_test.rs  integration_tests.rs  unit_tests.rs
tests/common/: mod.rs
tests/integration/: client_test.rs  configmaps_test.rs  deployments_test.rs  mod.rs  nodes_test.rs  pods_test.rs  services_test.rs  web_api_test.rs
tests/unit/: azure_test.rs  cloud_test.rs  debug_types_test.rs  error_test.rs  events_test.rs  gcp_test.rs  mod.rs  output_test.rs  registry_test.rs  resources_test.rs  traits_test.rs
